chore(extended-uportal-header): update default css

--- a/@uportal/extended-uportal-header/src/styles/extended-uportal-header.scss
+++ b/@uportal/extended-uportal-header/src/styles/extended-uportal-header.scss
@@ -2,7 +2,7 @@
   /* Colors */
   --ext-header-tpl-height: auto;
   /* Colors */
-  --ext-header-tpl-primary-color: #25b2f3;
+  --ext-header-tpl-primary-color: #1d1d1d;
   --ext-header-tpl-bg-color: var(--ext-header-tpl-primary-color);
   /* spaces */
   --ext-header-tpl-spaces: 8px;
