--- a/@uportal/extended-uportal-header/src/styles/extended-uportal-header.scss
+++ b/@uportal/extended-uportal-header/src/styles/extended-uportal-header.scss
@@ -79,6 +79,7 @@
       display: flex;
       align-items: center;
       text-decoration: none;
+      padding: 4px;
       &:visited {
         color: var(--ext-header-tpl-font-color);
       }
