fix(extended-uportal-header): fix style

--- a/@uportal/extended-uportal-header/src/styles/extended-uportal-header.scss
+++ b/@uportal/extended-uportal-header/src/styles/extended-uportal-header.scss
@@ -37,6 +37,7 @@
   #extended-uportal-header-org {
     flex: 0 1 fit-content;
     justify-content: left;
+    white-space: initial;
   }
 
   #extended-uportal-header-org {
