--- a/@uportal/esco-content-menu-lit/src/styles/content-user.scss
+++ b/@uportal/esco-content-menu-lit/src/styles/content-user.scss
@@ -115,6 +115,20 @@
               height: 24px;
             }
           }
+
+          > button {
+            float: right;
+            color: white;
+            margin-right: 15px;
+            border: none;
+            background: none;
+            cursor: pointer;
+
+            > svg {
+              width: 24px;
+              height: 24px;
+            }
+          }
         }
       }
     }
